...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/register_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_marginBottom="0dp"
                    android:text="@string/register_title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:hint="@string/username_hint">

                    <com.google.android.material.textfield.TextInputEditText
...
                        android:maxLines="1"
                        android:text="@={viewModel.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:hint="@string/email_hint">

                    <com.google.android.material.textfield.TextInputEditText
...
                        android:maxLines="1"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:hint="@string/password_hint"
                    app:endIconMode="password_toggle">

...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:onClick="@{()->viewModel.cancel()}"
                        android:text="@string/cancel_button" />

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->viewModel.register()}"
                        android:text="@string/register_button"
                        tools:ignore="ButtonStyle" />

...
