...
                        android:maxLines="1"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:hint="@string/password_hint"
                    app:errorEnabled="true"
                    app:endIconMode="password_toggle">
...
