...
            name="viewModel"
            type="com.example.unlibrary.library.LibraryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".library.LibraryFragment">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/library_book_list"
            android:name="com.example.unlibrary.book_list.BooksFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
